--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,12 +9,12 @@
             
         
         <div class="mt10 recent">
-            <h2>Recent articles</h2>        
+            <h2>最近の投稿</h2>
              <ul>
                 {{ range first 3 (where .Site.RegularPages "Section" "posts") }}
 
                       <li>
-                      <p><a href="{{ .URL }}">{{ .Title }}</a><small>&nbsp;&nbsp;{{ .Date.Format "January 2, 2006" }}</small></p>
+                      <p><a href="{{ .URL }}">{{ .Title }}</a><small>&nbsp;&nbsp;{{ .Date.Format "2006/01/02" }}</small></p>
                       </li>
 
                 {{ end }}
